Fix resizing bug in Projects component that breaks on mobile

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -91,7 +91,7 @@
 .description-outer-wrapper {
   flex-direction: row;
   color: var(--white);
-  width: 400px;
+  width: 60%;
   height: fit-content;
   margin: 5px 0 0 75px;
   /* outline: 2px solid red; */
